Revise reference using Property

--- a/tests/result/lang/ParseAndStringifyTinyTest.json
+++ b/tests/result/lang/ParseAndStringifyTinyTest.json
@@ -6,6 +6,7 @@
   "Field" : true,
   "Intrinsic" : true,
   "Literal" : true,
+  "Property" : true,
   "Reference" : true,
   "Step" : true,
   "Type" : true
