Add metalanguage and Fix ir

--- a/tests/result/lang/StringifyTinyTest.json
+++ b/tests/result/lang/StringifyTinyTest.json
@@ -2,6 +2,7 @@
   "BitwiseExpression" : true,
   "Block" : true,
   "CalcExpression" : true,
+  "ClampExpression" : true,
   "Condition" : true,
   "Expression" : true,
   "Intrinsic" : true,
