--- a/tests/result/lang/StringifyTinyTest.json
+++ b/tests/result/lang/StringifyTinyTest.json
@@ -7,6 +7,7 @@
   "Expression" : true,
   "Intrinsic" : true,
   "Literal" : true,
+  "MathOpExpression" : true,
   "Property" : true,
   "Reference" : true,
   "Step" : true,
